--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,16 @@ python-dotenv
 langchain-community
 yfinance
 langchain-openai
+langgraph
+langgraph-sdk
+langgraph-checkpoint-sqlite
+langsmith
+langchain-community
+langchain-core
+langchain-openai
+notebook
+tavily-python
+wikipedia
+trustcall
+langgraph-cli
+youtube-transcript-api
